--- a/Grow.Server/Styles/frontend.scss
+++ b/Grow.Server/Styles/frontend.scss
@@ -977,6 +977,7 @@ input[type="reset"],
     background-attachment: scroll, scroll, scroll, fixed;
     background-color: _palette(three, bg);
     background-image: url('/css/images/light-tl.svg'), url('/css/images/light-tr.svg'), url('/css/images/overlay.png'), url('/css/images/background_2.jpg');
+    background-blend-mode: soft-light;
     background-position: top left, top right, top left, bottom center;
     background-repeat: no-repeat, no-repeat, repeat, no-repeat;
     background-size: $pattern-background-size, $pattern-background-size, auto, cover;
