Replaced crawler banner

--- a/Grow.Server/Views/Shared/Layouts/_FrontendLayout.cshtml
+++ b/Grow.Server/Views/Shared/Layouts/_FrontendLayout.cshtml
@@ -42,7 +42,7 @@
 
     <meta charset="utf-8" />
     <meta property="og:title" content="GROW - the Student Founding Contest" />
-    <meta property="og:image" content="http://grow.pioniergarage.de/img/crawler_banner.jpg?v=1ba4c2" />
+    <meta property="og:image" content="http://grow.pioniergarage.de/img/crawler_banner.png?v=3f5b" />
     <meta property="og:site_name" content="GROW by PionierGarage" />
     <meta property="og:url" content="https://grow.pioniergarage.de" />
     <meta property="og:type" content="website" />
