--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
 <section id="banner">
     <div id="inner">
         <div class="video-wrapper">
-            <iframe width="600" height="337" src="https://www.youtube-nocookie.com/embed/VzELimhokkQ?modestbranding=1&rel=0&autohide=1&showinfo=0&controls=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="GROW"></iframe>
+            <iframe width="600" height="337" src="https://www.youtube-nocookie.com/embed/kqhC5_nmaU8?modestbranding=1&rel=0&autohide=1&showinfo=0&controls=0" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen alt="GROW"></iframe>
         </div>
     </div>
     <p>&nbsp;</p>
