--- a/Grow.Server/Views/Home/Newsletter.cshtml
+++ b/Grow.Server/Views/Home/Newsletter.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Newsletter Sign-Up";
 }
 
-<script type="text/javascript" id="lbscript1196931" src="https://lb.benchmarkemail.com//de/code/lbformnew.js?mFcQnoBFKMTsK6pJMlXEB1cgGr0xQgnhhpzUQIyvOqERo7EOPCQKdMj9ybR%252Bnt%252Fk"></script>
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/da3f5cc2994d9b3c480223b41/0253c9252b65ee86dfb098849.js");</script>
 
 <article id="main">
 
