--- a/Grow.Server/Views/Home/Newsletter.cshtml
+++ b/Grow.Server/Views/Home/Newsletter.cshtml
@@ -1,7 +1,7 @@
 <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/da3f5cc2994d9b3c480223b41/40fa235079e44ba190c0c0306.js");</script>
 
 <script>
-    console.info("v05", "this works, 1000%");
+    console.info("v05");
 </script>
 
 @{
