--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -1,5 +1,10 @@
 ﻿@model Grow.Server.Model.ViewModels.IndexViewModel
 
+
+<script>
+    console.info("v07");
+</script>
+
 @{
     ViewBag.Title = "Welcome to GROW";
     ViewBag.TransparentNavbar = true;
