--- a/Grow.Server/Views/Home/Newsletter.cshtml
+++ b/Grow.Server/Views/Home/Newsletter.cshtml
@@ -27,7 +27,7 @@
 <div id="mc_embed_signup">
 <form action="https://pioniergarage.us17.list-manage.com/subscribe/post?u=da3f5cc2994d9b3c480223b41&amp;id=dad326a027" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2>Updates?</h2>
+	<h2>Sign up to get notified about the main events, the opening of team registrations and other news.</h2>
 <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 <div class="mc-field-group">
 	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
@@ -53,9 +53,7 @@
 </div>
 <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
-                
-                
-                
+		    
                 <p>
                     Thank you for your interest in our newsletter.
                 </p>
