Add Newsletter Link to Registration Button

--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -93,10 +93,19 @@
                             </a>
                         </li>
                     }
-                    else
+                    else {
+                   <li>
+                            <a href="https://grow.pioniergarage.de/Home/Newsletter" target="_blank" class="button special">
+                                Registrations are not yet opened. Sign up for our newsletter.
+                            </a>
+                        </li>
+                    }
+                    
+                    <!--
                     {
                         <li><span class="button disabled">Registrations have not yet opened</span></li>
-                    }
+                    } -->
+                    
                 </ul>
                 <span style="font-size: 80%">(Deadline: @deadline.ToShortDateString() @deadline.ToShortTimeString())</span>
             </p>
