--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -96,7 +96,7 @@
                     else {
                    <li>
                             <a href="https://grow.pioniergarage.de/Home/Newsletter" target="_blank" class="button special">
-                                Registrations are not yet opened. Sign up for our newsletter.
+                                Registrations are not yet opened. <br> Sign up for our newsletter.
                             </a>
                         </li>
                     }
