--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -83,7 +83,7 @@
             <header>
                 <h2>You want to participate in @Model.Contest.Year?</h2>
             </header>
-            <p>
+           <!-- <p>
                 <ul class="buttons" style="margin: 0">
                     @if (Model.Contest.RegistrationUrl != null)
                     {
@@ -96,19 +96,49 @@
                     else {
                    <li>
                             <a href="https://grow.pioniergarage.de/Home/Newsletter" target="_blank" class="button special">
-                                Registrations are not yet opened. <br> Sign up for our newsletter.
+                                Sign up for our newsletter
                             </a>
                         </li>
                     }
                     
-                    <!--
+                    /*
                     {
                         <li><span class="button disabled">Registrations have not yet opened</span></li>
-                    } -->
+                    } */
                     
                 </ul>
                 <span style="font-size: 80%">(Deadline: @deadline.ToShortDateString() @deadline.ToShortTimeString())</span>
+            </p> -->
+
+        <p>
+            @if (Model.Contest.RegistrationUrl != null) {
+                <ul class="buttons" style="margin: 0">
+                        <li>
+                            <a href="@Model.Contest.RegistrationUrl" target="_blank" class="button special">
+                                Register now
+                            </a>
+                        </li>
+                    </ul>
+                    }
+        
+                    else {
+        <p> 
+            Registrations have not yet opened.
+        </p>
+                <ul class="buttons" style="margin: 0">
+                   <li>
+                            <a href="https://grow.pioniergarage.de/Home/Newsletter" target="_blank" class="button special">
+                                Sign up for our newsletter
+                            </a>
+                        </li>
+                    </ul>
+                    }
+              
+                <span style="font-size: 80%">(Deadline: @deadline.ToShortDateString() @deadline.ToShortTimeString())</span>
             </p>
+        
+        
+        
             <p>
                 You can also attend the Kickoff event and enter spontaneously.
             </p>
