--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -101,7 +101,7 @@
         </p>
                 <ul class="buttons" style="margin: 0">
                    <li>
-                            <a href="https://grow.pioniergarage.de/Home/Newsletter" target="_blank" class="button special">
+                            <a href="https://grow.pioniergarage.de/Home/Newsletter" class="button special">
                                 Sign up for our newsletter
                             </a>
                         </li>
@@ -110,9 +110,7 @@
               
                 <span style="font-size: 80%">(Deadline: @deadline.ToShortDateString() @deadline.ToShortTimeString())</span>
             </p>
-        
-        
-        
+    
             <p>
                 You can also attend the Kickoff event and enter spontaneously.
             </p>
