--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -13,6 +13,9 @@
         </div>
     </div>
     <p>&nbsp;</p>
+    
+    <div class="powr-popup" id="f1c2eb5f_1603110934"></div><script src="https://www.powr.io/powr.js?platform=embed"></script>
+    
     @if (Model.IsBeforeContest)
     {
         // countdown
