--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -70,6 +70,28 @@
             <strong>Supporting young founders - every winter in Karlsruhe</strong>
         </h3>
     </section>
+    
+    <!--hier geht der scheiss los-->
+    
+    <section class="wrapper container" style="font-size: 100%; padding-top: 0px; padding-bottom: 0px;">
+        <header>
+           
+                <h2 style="text-align: center">Join our brand new Pre-GROW event!</h2>
+            
+            <p style="font-weight: 500;">
+               The entrepreneurial journey often starts with a first business idea. However, valuable business ideas are hard to find. The Opportunity Recognition Workshop is designed for entrepreneurial students to find promising business opportunities and develop valuable business ideas. Teams and individuals with an already existing ideas are also invited to conceptualize and refine their ideas to have a profound start in the GROW contest.
+            </p>
+        </header>
+        <p>
+            In the Opportunity Recognition Workshop, you will analyze and align your core values and core competences with the market needs to identify business opportunities you want to exploit.
+        </p>
+        <h3 style="text-align: center">
+            <strong>Register for the workshop via our registration form!</strong>
+        </h3>
+    </section>
+    
+    
+    <!--stopp-->
 
     <section id="cta">
         @if (Model.RegistrationDeadline > DateTime.Now)
