--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -130,6 +130,8 @@
     
             <p>
                 You can also attend the Kickoff event and enter spontaneously.
+                <br>
+                Take note that for our Pre-Grow Event, you will need to sign up for the contest.
             </p>
         }
         else if (Model.MainEvents.Any(e => e.Start > DateTime.Now))
