--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -71,7 +71,7 @@
         </h3>
     </section>
     
-    <!--hier geht der scheiss los-->
+    <!--Pre-GROW event-->
     
     <section class="wrapper container" style="font-size: 100%; padding-top: 0px; padding-bottom: 0px;">
         <header>
@@ -248,6 +248,63 @@
             @Html.ActionLink("Sign up", "Newsletter", "Home", null, new { @class = "button special" })
         </p>
     </section>
+
+<!---FAQ--->
+
+<article id="main">
+    <section class="wrapper container" style="font-size: 100%; padding-top: 0px; padding-bottom: 0px;">
+        <header>
+            
+                <h2 style="text-align: center">FAQ</h2>
+            
+            <p style="font-weight: 500;">
+                <ol>                
+                    <li>
+                        <dl>
+                            <dt><i>In what language does GROW take place?</i></dt>
+                            <dd>The event will be held entirely in English this year.</dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <dl>
+                            <dt><i>Can I take part if I’m not a student?</i></dt>
+                            <dd>Yes, GROW is for everyone, whether you’re a student or not.</dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <dl>
+                            <dt><i>Can we sign up as an existing team?</i></dt>
+                            <dd>Yes, in the registration form there is the option to enter already existing teams.</dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <dl>
+                            <dt><i>If we already are a team, should only one person sign up?</i></dt>
+                            <dd>No, you would make it easier for us, if everyone registers individually.</dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <dl>
+                            <dt><i>Can we take part as a university association?</i></dt>
+                            <dd>If your group is formed out of members of your association you can - of course - participate. Note that you will need a defined team and should have the intention of founding an actual company.</dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <dl>
+                            <dt><i>In what format will the contest take place in Corona times?</i></dt>
+                            <dd>We have decided to hold the event in a hybrid format: The kickoff will at least take place completely digitally, the other main events will depend on the occurrence of infection. Most workshops are - following a hygiene concept - held on site.</dd>
+                        </dl>
+                    </li>
+                    <li>
+                        <dl>
+                            <dt><i>Can I also participate if I am not in Karlsruhe during the competition?</i></dt>
+                            <dd>Yes, it will be possible to attend the obligatory events remotely. However, you might miss out some workshops that are held on site.</dd>
+                        </dl>
+                    </li>
+            </p>
+        </header>
+    </section>
+<!--stopp-->
 
     <section class="wrapper style3 container special" style="margin-top: 100px">
         <header class="major">
