--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -260,47 +260,26 @@
             <p style="font-weight: 500;">
                 <ol>                
                     <li>
-                        <dl>
-                            <dt><i>In what language does GROW take place?</i></dt>
-                            <dd>The event will be held entirely in English this year.</dd>
-                        </dl>
+                            <i>In what language does GROW take place?</i> <br> The event will be held entirely in English this year.
                     </li>
                     <li>
-                        <dl>
-                            <dt><i>Can I take part if I’m not a student?</i></dt>
-                            <dd>Yes, GROW is for everyone, whether you’re a student or not.</dd>
-                        </dl>
+                            <i>In what language does GROW take place?</i> <br> The event will be held entirely in English this year.
                     </li>
                     <li>
-                        <dl>
-                            <dt><i>Can we sign up as an existing team?</i></dt>
-                            <dd>Yes, in the registration form there is the option to enter already existing teams.</dd>
-                        </dl>
+                            <i>In what language does GROW take place?</i> <br> The event will be held entirely in English this year.
                     </li>
                     <li>
-                        <dl>
-                            <dt><i>If we already are a team, should only one person sign up?</i></dt>
-                            <dd>No, you would make it easier for us, if everyone registers individually.</dd>
-                        </dl>
+                            <i>In what language does GROW take place?</i> <br> The event will be held entirely in English this year.
                     </li>
                     <li>
-                        <dl>
-                            <dt><i>Can we take part as a university association?</i></dt>
-                            <dd>If your group is formed out of members of your association you can - of course - participate. Note that you will need a defined team and should have the intention of founding an actual company.</dd>
-                        </dl>
+                            <i>In what language does GROW take place?</i> <br> The event will be held entirely in English this year.
                     </li>
                     <li>
-                        <dl>
-                            <dt><i>In what format will the contest take place in Corona times?</i></dt>
-                            <dd>We have decided to hold the event in a hybrid format: The kickoff will at least take place completely digitally, the other main events will depend on the occurrence of infection. Most workshops are - following a hygiene concept - held on site.</dd>
-                        </dl>
+                            <i>In what language does GROW take place?</i> <br> The event will be held entirely in English this year.
                     </li>
                     <li>
-                        <dl>
-                            <dt><i>Can I also participate if I am not in Karlsruhe during the competition?</i></dt>
-                            <dd>Yes, it will be possible to attend the obligatory events remotely. However, you might miss out some workshops that are held on site.</dd>
-                        </dl>
-                    </li>
+                            <i>In what language does GROW take place?</i> <br> The event will be held entirely in English this year.
+                    </li>                   
             </ol>                 
             </p>
         </header>
