--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -259,28 +259,10 @@
             
             <p style="font-weight: 500;">
                 <ol>                
-                    <li>
-                            <i>In what language does GROW take place?</i> <br> The event will be held entirely in English this year.
-                    </li>
-                    <li>
-                            <i>In what language does GROW take place?</i> <br> The event will be held entirely in English this year.
-                    </li>
-                    <li>
-                            <i>In what language does GROW take place?</i> <br> The event will be held entirely in English this year.
-                    </li>
-                    <li>
-                            <i>In what language does GROW take place?</i> <br> The event will be held entirely in English this year.
-                    </li>
-                    <li>
-                            <i>In what language does GROW take place?</i> <br> The event will be held entirely in English this year.
-                    </li>
-                    <li>
-                            <i>In what language does GROW take place?</i> <br> The event will be held entirely in English this year.
-                    </li>
-                    <li>
-                            <i>In what language does GROW take place?</i> <br> The event will be held entirely in English this year.
-                    </li>                   
-            </ol>                 
+                    <li>The event will be held entirely in English this year.</li>
+                    <li>The event will be held entirely in English this year.</li>
+                    <li>The event will be held entirely in English this year.</li>
+                </ol>                 
             </p>
         </header>
     </section>
