--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -258,7 +258,7 @@
                 <h2 style="text-align: center">FAQ</h2>
             
             <p style="font-weight: 500;">
-                <ol style="list-style-type: decimal;">                
+                <ol style="list-style: decimal;">                
                     <li>The event will be held entirely in English this year.</li>
                     <li>The event will be held entirely in English this year.</li>
                     <li>The event will be held entirely in English this year.</li>
