--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -259,9 +259,48 @@
             
             <p style="font-weight: 500;">
                 <ol style="list-style: decimal;">                
-                    <li>The event will be held entirely in English this year.</li>
-                    <li>The event will be held entirely in English this year.</li>
-                    <li>The event will be held entirely in English this year.</li>
+                    <li> 
+                        <dl>
+                            <dt>In what language does GROW take place?</dt>
+                            <dd> answer </dd>
+                        </dl>
+                    </li>
+                    <li> 
+                        <dl>
+                            <dt> question </dt>
+                            <dd> answer </dd>
+                        </dl>
+                    </li>
+                    <li> 
+                        <dl>
+                            <dt> question </dt>
+                            <dd> answer </dd>
+                        </dl>
+                    </li>
+                    <li> 
+                        <dl>
+                            <dt> question </dt>
+                            <dd> answer </dd>
+                        </dl>
+                    </li>
+                    <li> 
+                        <dl>
+                            <dt> question </dt>
+                            <dd> answer </dd>
+                        </dl>
+                    </li>
+                    <li> 
+                        <dl>
+                            <dt> question </dt>
+                            <dd> answer </dd>
+                        </dl>
+                    </li>
+                    <li> 
+                        <dl>
+                            <dt> question </dt>
+                            <dd> answer </dd>
+                        </dl>
+                    </li>
                 </ol>                 
             </p>
         </header>
