--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -255,50 +255,50 @@
     <section class="wrapper container" style="font-size: 100%; padding-top: 0px; padding-bottom: 0px;">
         <header>
             
-                <h2 style="text-align: center">FAQ</h2>
+            <h2 style="text-align: center"><strong>FAQ</strong></h2>
             
             <p style="font-weight: 500;">
                 <ol style="list-style: decimal;">                
                     <li> 
                         <dl>
-                            <dt>In what language does GROW take place?</dt>
-                            <dd> answer </dd>
+                            <dt><i>In what language does GROW take place?</i></dt>
+                            <dd>The event will be held entirely in English this year.</dd>
                         </dl>
                     </li>
                     <li> 
                         <dl>
-                            <dt> question </dt>
-                            <dd> answer </dd>
+                            <dt>Can I take part if I’m not a student?</dt>
+                            <dd>Yes, GROW is for everyone, whether you’re working or not.</dd>
                         </dl>
                     </li>
                     <li> 
                         <dl>
-                            <dt> question </dt>
-                            <dd> answer </dd>
+                            <dt>Can we sign up as a team?</dt>
+                            <dd>Yes, in the registration form there is the option to enter already existing teams.</dd>
                         </dl>
                     </li>
                     <li> 
                         <dl>
-                            <dt> question </dt>
-                            <dd> answer </dd>
+                            <dt>If we already are a team, should only one person sign up?</dt>
+                            <dd>No, you would make it easier for us, if everyone registers individually.</dd>
                         </dl>
                     </li>
                     <li> 
                         <dl>
-                            <dt> question </dt>
-                            <dd> answer </dd>
+                            <dt>Can we take part as a university association?</dt>
+                            <dd>If your group consists of members of your association you can - of course - participate. However, note that you will need a defined team and should have the intention of founding a company.</dd>
                         </dl>
                     </li>
                     <li> 
                         <dl>
-                            <dt> question </dt>
-                            <dd> answer </dd>
+                            <dt>In what format will the contest take place in Corona times?</dt>
+                            <dd>We have decided to hold the event in a hybrid format: The kick-off will at least take place completely digitally, the other main events will depend on the occurrence of infection. Most workshops are - following a hygiene concept - held on site.</dd>
                         </dl>
                     </li>
                     <li> 
                         <dl>
-                            <dt> question </dt>
-                            <dd> answer </dd>
+                            <dt>Can I also participate if I am not in Karlsruhe during the competition?</dt>
+                            <dd>Yes, it will be possible to attend the obligatory events remotely. However, you might miss out some workshops that are held on site.</dd>
                         </dl>
                     </li>
                 </ol>                 
