--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -268,7 +268,7 @@
                     <li> 
                         <dl>
                             <dt>Can I take part if I’m not a student?</dt>
-                            <dd>Yes, GROW is for everyone, whether you’re working or not.</dd>
+                            <dd>Yes, GROW is for everyone, whether you’re working or not. However, each team must consist out of at least one student.</dd>
                         </dl>
                     </li>
                     <li> 
