--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -261,43 +261,43 @@
                 <ol style="list-style: decimal;">                
                     <li> 
                         <dl>
-                            <dt><i>In what language does GROW take place?</i></dt>
+                            <dt><span style="font-style: italic;">In what language does GROW take place?</span></dt>
                             <dd>The event will be held entirely in English this year.</dd>
                         </dl>
                     </li>
                     <li> 
                         <dl>
-                            <dt>Can I take part if I’m not a student?</dt>
+                            <dt><span style="font-style: italic;">Can I take part if I’m not a student?</span></dt>
                             <dd>Yes, GROW is for everyone, whether you’re working or not. However, each team must consist out of at least one student.</dd>
                         </dl>
                     </li>
                     <li> 
                         <dl>
-                            <dt>Can we sign up as a team?</dt>
+                            <dt><span style="font-style: italic;">Can we sign up as a team?</span></dt>
                             <dd>Yes, in the registration form there is the option to enter already existing teams.</dd>
                         </dl>
                     </li>
                     <li> 
                         <dl>
-                            <dt>If we already are a team, should only one person sign up?</dt>
+                            <dt><span style="font-style: italic;">If we already are a team, should only one person sign up?</span></dt>
                             <dd>No, you would make it easier for us, if everyone registers individually.</dd>
                         </dl>
                     </li>
                     <li> 
                         <dl>
-                            <dt>Can we take part as a university association?</dt>
+                            <dt><span style="font-style: italic;">Can we take part as a university association?</span></dt>
                             <dd>If your group consists of members of your association you can - of course - participate. However, note that you will need a defined team and should have the intention of founding a company.</dd>
                         </dl>
                     </li>
                     <li> 
                         <dl>
-                            <dt>In what format will the contest take place in Corona times?</dt>
+                            <dt><span style="font-style: italic;">In what format will the contest take place in Corona times?</span></dt>
                             <dd>We have decided to hold the event in a hybrid format: The kick-off will at least take place completely digitally, the other main events will depend on the occurrence of infection. Most workshops are - following a hygiene concept - held on site.</dd>
                         </dl>
                     </li>
                     <li> 
                         <dl>
-                            <dt>Can I also participate if I am not in Karlsruhe during the competition?</dt>
+                            <dt><span style="font-style: italic;">Can I also participate if I am not in Karlsruhe during the competition?</span></dt>
                             <dd>Yes, it will be possible to attend the obligatory events remotely. However, you might miss out some workshops that are held on site.</dd>
                         </dl>
                     </li>
