--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -279,8 +279,8 @@
                     </li>
                     <li> 
                         <dl>
-                            <dt><span style="font-style: italic;">If we already are a team, should only one person sign up?</span></dt>
-                            <dd>No, you would make it easier for us, if everyone registers individually.</dd>
+                            <dt><span style="font-style: italic;">If we already are a team, should every person sign up?</span></dt>
+                            <dd>No, you would make it easier for us, if you submit one registration per idea.</dd>
                         </dl>
                     </li>
                     <li> 
