--- a/Grow.Server/Views/Home/Index.cshtml
+++ b/Grow.Server/Views/Home/Index.cshtml
@@ -280,7 +280,7 @@
                     <li> 
                         <dl>
                             <dt><span style="font-style: italic;">If we already are a team, should every person sign up?</span></dt>
-                            <dd>No, you would make it easier for us, if you submit one registration per idea.</dd>
+                            <dd>No, you would make it easier for us, if you submitted one registration per idea.</dd>
                         </dl>
                     </li>
                     <li> 
