--- a/Grow.Server/Views/Home/pbnb.cshtml
+++ b/Grow.Server/Views/Home/pbnb.cshtml
@@ -33,7 +33,7 @@
 
     <header class="special container">
         <span class="icon fa-male"></span>
-        <h2>GROW can only exist due to a strong <strong>Team</strong></h2>
+        <h2>this is a <strong>test</strong></h2>
     </header>
     
     @if (Model.Any())
